Panel Section Completed

--- a/Amazon-clone/index.html
+++ b/Amazon-clone/index.html
@@ -13,8 +13,10 @@
 </head>
 
 <body>
-
     <header>
+
+        <!-- navbar start -->
+
         <div class="navbar">
 
             <div class="nav-logo border">
@@ -39,29 +41,44 @@
                 </select>
             </div>
 
-
             <div class="nav-signin border">
                 <p><span>Hello, sign in</span></p>
                 <p class="nav-second">Account & Lists</p>
             </div>
 
-             <div class="nav-orders border">
+            <div class="nav-orders border">
                 <p><span>Returns</span></p>
                 <p class="nav-second">& Orders</p>
             </div>
 
             <div class="nav-cart border">
-               <i class="fa-solid fa-cart-shopping"></i>
+                <i class="fa-solid fa-cart-shopping"></i>
                 Cart
             </div>
 
-
-
-
         </div>
+
+        <!-- navbar end -->
+
+        <!-- panel start -->
+
+        <div class="panel">
+            <div class="all-panel border">
+                <p><i class="fa-solid fa-bars"></i>All</p>
+            </div>
+            <div class="panel-ops">
+                <p class="border">Today's Deals</p>
+                <p class="border">Prime Video</p>
+                <p class="border">Registry</p>
+                <p class="border">Gift Cards</p>
+                <p class="border">Customers Service</p>
+                <p class="border">Sell</p>
+            </div>
+        </div>
+
+        <!-- panel end -->
+
     </header>
-
 </body>
-
 
 </html>
