Added Hero Section

--- a/Amazon-clone/index.html
+++ b/Amazon-clone/index.html
@@ -79,6 +79,16 @@
         <!-- panel end -->
 
     </header>
+
+
+
+    <!-- hero section -->
+<div class="hero-section">
+
+</div>
+
+
+
 </body>
 
 </html>
