Added Cards Section

--- a/Amazon-clone/index.html
+++ b/Amazon-clone/index.html
@@ -83,9 +83,21 @@
 
 
     <!-- hero section -->
-<div class="hero-section">
+    <div class="hero-section">
 
-</div>
+    </div>
+
+    <div class="cards-section">
+        <div class="box1 box">
+            <h2>Health & Personal Care</h2>
+            <div class="card-img"></div>
+            <p>See More!</p>
+        </div>
+        <div class="box2 box">Box-2</div>
+        <div class="box3 box">Box-3</div>
+        <div class="box4 box">Box-4</div>
+    </div>
+
 
 
 
